--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+<link rel="manifest" href="/jp/assets/site-CCjZE5-t.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
@@ -27,17 +27,19 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Maitree:wght@400;500;700&family=Prompt:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
+    />
+    <script type="module" crossorigin src="/jp/assets/style-DLA1DiU9.js"></script>
+    <script type="module" crossorigin src="/jp/assets/nav-DogM-Ecs.js"></script>
+    <link rel="stylesheet" crossorigin href="/jp/assets/style-1rTz7WYF.css">
   </head>
   <body>
     <nav data-visible="false">
-      <ul>
-        <li><a href="main.html">หน้าหลัก</a></li>
+            <ul>
+        <li><a href="index.html">หน้าหลัก</a></li>
+        <li><a href="main.html">ดูเวลาทำการ</a></li>
         <li><a href="pricing.html">ดูราคา</a></li>
         <li><a href="3d.html">ปรินต์ 3D</a></li>
-        <li><a href="about.html">เกี่ยวกับร้านจิ้ม</a></li>
+        <!-- <li><a href="about.html">เกี่ยวกับร้านจิ้ม</a></li> -->
         <li><a href="contact.html">ช่องทางติดต่อ</a></li>
       </ul>
     </nav>
@@ -62,9 +64,9 @@
     </div>
     <div class="container">
       <div class="content">
-        <h2>ร้านพิมพ์งานสถาปัตย์ อยู่ในซอย 21 ตรงข้ามพาต้า</h2>
+        <h2 style="text-align: center;">ร้านพิมพ์งานสถาปัตย์<br>อยู่ในซอย 21 ตรงข้ามพาต้า</h2>
         <h2>ใกล้ปิ่นทิพย์ปิ่นแก้ว พิมพ์ไม่มั่วสเกล</h2>
-        <h2>เจ้าของร้านชื่อมิวสิก ไม่ได้ชื่อจิ้ม</h2>
+        <h2>เจ้าของร้านชื่อมิวสิกไม่ได้ชื่อจิ้ม</h2>
       </div>
     </div>
     </div>
