--- a/index.html
+++ b/index.html
@@ -12,105 +12,185 @@
     <title>Jimm Print</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="/jp/assets/site-CCjZE5-t.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
     <!-- Mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="preconnect" href="https://fonts.googleapis.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Maitree:wght@400;500;700&family=Prompt:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
-    <style>
-      .body {
-        overflow: hidden;
-      }
-      .mainsnake {
-        padding: 1rem;
-        margin: 1rem;
-        height: 80vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-      .mainsnake p {
-        margin: 1rem;
-      }
-
-      #bigsnake {
-        height: 50%;
-        pointer-events: none;
-      }
-      .btn-enter {
-        padding: 0.25rem;
-        font-size: var(--fs-primary-heading);
-      }
-      /* .btn-enter:hover {
-    background-color: var(--clr-primary-400)
-  } */
-    </style>
+    <script type="module" crossorigin src="/jp/assets/main-DFEFzwQ6.js"></script>
+    <link rel="modulepreload" crossorigin href="/jp/assets/style-DLA1DiU9.js">
+    <link rel="stylesheet" crossorigin href="/jp/assets/style-1rTz7WYF.css">
+    <link rel="stylesheet" crossorigin href="/jp/assets/main-D24Qirgk.css">
   </head>
   <body>
-    <div class="mainsnake">
-      <img id="bigsnake" src="images/bigsnake.png" alt="Picture of Orphic Egg ">
-      <!-- <svg
-        id="bigsnake"
-        data-name="Layer 1"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 261.53 429.89"
-      >
-        <defs>
-          <style>
-            .cls-1 {
-              fill: none;
-              stroke: var(--clr-primary-400);
-              stroke-linecap: round;
-              stroke-linejoin: round;
-              stroke-width: 2px;
-            }
-          </style>
-        </defs>
-        <path
-          class="cls-1"
-          d="M252.73,247.59c-5.36-5.52-12.56-8.56-20.17-10.56-7.08-1.86-14.52-2.82-21.19-4-18.28-3.29-36.75-6.08-54.41-12-21.47-7.21-44.38-17.5-63.28-30-7.62-5-14.58-11.37-19.52-19A47.93,47.93,0,0,1,70.33,165c-10.61-24.47,6.56-50.59,32.84-52.57,18.16-1.37,37.66,9.17,53.81.75,12-6.28,17.58-21.21,29.57-27.6,5.88-3.14,12.92-3.8,18.63-7.23,6.34-3.82,10.38-10.26,14-16.53q10.07-17.55,20-35.15c1.94-3.43,5-7.43,3.27-11.56C240.05,9.5,234.75,4,229,2c-6.14-2.13-12.75-.45-18.48,2.12-10,4.51-20.11,9.15-29.34,15.17-6.76,4.42-13.13,9.64-17.82,16.22-8.62,12.08-5.11,27.15-16.13,38-3.89,3.83-9.51,6.3-14.83,5.12-10.84-2.38-19.29-3.3-30.64-1.65A95.19,95.19,0,0,0,61.1,92.51c-19.36,13.47-33,36.17-32.87,60.11.13,16.65,6.82,32.69,16.94,46a97.47,97.47,0,0,0,6.67,7.91c13.76,14.65,31.34,25.17,49.47,33.84a329.77,329.77,0,0,0,66.91,23.5c21.68,5.08,70.26,8.34,71.31,8.41h0v.09c-.07,1.2-.92,15-1.64,21.48l0,.07,0,.12a27.68,27.68,0,0,0,14.75-46.48Z"
-        />
-        <path
-          class="cls-1"
-          d="M145.55,374c-17.05.4-34.2,2.31-51.18-.1a103.2,103.2,0,0,1-52.63-24c-3-2.63-12-12.38-12-12.38l-3.29-24.25h0S2.79,317.67,5.06,344c2.53,29.18,39.69,54.15,83.43,59.52a138.94,138.94,0,0,0,40.61-.91c29.89-5.19,41.19-4.76,58.66-4.26.48,0,1,0,1.55.09,9.32.73,28.41,5.67,41.91,13.71-1.11-11.4-3-20.22-26.75-29.08-2.75-1-5.79-2.06-9.16-3.09C179.26,375,162.26,373.57,145.55,374Z"
-        />
-        <path
-          class="cls-1"
-          d="M238.37,319a34.18,34.18,0,0,0-3.64-2l-.11-.05V317c-6.81-3.34-14.58-4.6-22.14-5.78-31.14-4.87-62.27-7.29-93-15.24-17.94-4.64-36.11-9.57-52.51-18.41-14.85-8-33.1-22.09-37.35-39.38h0c.58-2,3.2-12.31,3.86-14.33.79-2.24,4.28-10.55,5.2-12.75,0,0-9.37-1.21-10.6-1.27a24.64,24.64,0,0,0-15,4C-4.5,225.52-.15,253.09,8.81,268.73A85.65,85.65,0,0,0,25,288.68l.11.11c10.06,9.34,22.06,16.91,33.83,23,20.54,10.64,42.82,17.61,65.3,22.8,10.14,2.35,20.36,4.29,30.64,5.89s20.57,2.89,30.91,3.92c6.85.68,13.72,1.23,20.59,1.7,3.5.24,7,.47,10.51.68l5.26.32c.23,0,3,.29,3.67.28h0c.07,0,.12,0,.13,0-1.63,4-3.47,7.88-5.47,11.69-.89,1.71-1.89,3.36-2.75,5.08-.18.35-1.26,2.3-1.36,2.49l0,0s20.46-2.31,27.07-10.69C252.53,344.44,251,327.17,238.37,319Z"
-        />
-        <path
-          class="cls-1"
-          d="M129.1,402.56a138.94,138.94,0,0,1-40.61.91l1.77,1.88c.6.81,2.71,3.25,3.93,4.65a71.08,71.08,0,0,0,5.68,5.64c1.32,1.1,4.14,3.36,5.44,4.33s4.57,3.12,6,3.86c1,.55,4.84,2.27,6.31,2.78,1.66.58,6.23,1.68,7.22,1.85a43.82,43.82,0,0,0,6.94.43c2-.05,6.32-.18,7.7-.31s3.8-.54,6-1c1.6-.36,5.83-1.62,6.49-1.86,1.22-.42,4.48-1.87,6.4-2.78a78,78,0,0,0,7-3.76,148.43,148.43,0,0,0,12.1-8.91c1.89-1.7,5.24-5.16,5.44-5.36l6.44-6.52c-.55-.05-1.07-.08-1.55-.09C170.29,397.8,159,397.37,129.1,402.56Z"
-        />
-        <path
-          class="cls-1"
-          d="M93.68,191c18.9,12.47,41.81,22.76,63.28,30,17.66,5.92,36.13,8.71,54.41,12,6.67,1.2,14.11,2.16,21.19,4-.11-17.54-9.86-33.54-20.68-46.64-15.31-18.51-36.22-32.78-59.65-38.12a88.52,88.52,0,0,0-41.07.47c-14.23,3.56-24.68,11-36.64,19a.84.84,0,0,0-.32.3l0,0C79.1,179.67,86.06,186,93.68,191Z"
-        />
-        <path
-          class="cls-1"
-          d="M26.42,313.23,25,288.68l.11.11c10.06,9.34,22.06,16.91,33.83,23,20.54,10.64,42.82,17.61,65.3,22.8,10.14,2.35,20.36,4.29,30.64,5.89s20.57,2.89,30.91,3.92c6.85.68,13.72,1.23,20.59,1.7,3.5.24,7,.47,10.51.68l5.26.32c.23,0,3,.29,3.67.28h0c.07,0,.12,0,.13,0-1.63,4-3.47,7.88-5.47,11.69-.89,1.71-1.89,3.36-2.75,5.08-.18.35-1.26,2.3-1.36,2.49l0,0c-1,1.6-2.05,3.17-3,4.64a91.49,91.49,0,0,1-8.28,11.11l-.6.61c-2.75-1-5.79-2.06-9.16-3.09-16.05-4.92-33.05-6.36-49.76-5.95-17.05.4-34.2,2.31-51.18-.1a103.2,103.2,0,0,1-52.63-24c-3-2.63-12-12.38-12-12.38l-3.29-24.25h0"
-        />
-        <path
-          class="cls-1"
-          d="M29.64,238.19h0c4.25,17.29,22.5,31.38,37.35,39.38,16.4,8.84,34.57,13.77,52.51,18.41,30.7,7.95,61.83,10.37,93,15.24,7.56,1.18,15.33,2.44,22.14,5.78v-.07c.19-.82,1.4-6.2,1.87-9,.29-1.87.74-7,1.44-14l0-.07c.72-6.48,1.57-20.28,1.64-21.48l0-.09c-1.05-.07-49.63-3.33-71.31-8.41a329.77,329.77,0,0,1-66.91-23.5c-18.13-8.67-35.71-19.19-49.47-33.84a97.47,97.47,0,0,1-6.67-7.91l0,0c-1.41,2.6-4.82,9.06-6.44,12.43-.92,2.2-4.41,10.51-5.2,12.75C32.84,225.88,30.22,236.15,29.64,238.19Z"
-        />
-      </svg> -->
-      <div>
-        <p style="user-select: none;">Hoc monstrum generat,<br />perficit ignis et Azoch.</p>
-      </div>
-      <a href="main.html" class="btn-enter">Enter</a>
+    <!-- <script>0</script> -->
+    <!-- <div id="app"></div> -->
+    <div class="loadingscreen">
+      <div class="spinner"></div>
+      <p class="motto">
+        Hoc monstrum generat,<br />tum perficit ignis, et Azoch
+      </p>
+      <button class="btn-enter">Enter</button>
     </div>
+    <nav data-visible="false">
+            <ul>
+        <!-- <li><a href="index.html">หน้าหลัก</a></li> -->
+        <li><a href="main.html">ดูเวลาทำการ</a></li>
+        <li><a href="pricing.html">ดูราคา</a></li>
+        <li><a href="3d.html">ปรินต์ 3D</a></li>
+        <li><a href="about.html">เกี่ยวกับร้านจิ้ม</a></li>
+        <li><a href="contact.html">ช่องทางติดต่อ</a></li>
+      </ul>
+    </nav>
+    <div class="burger">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="icon icon-tabler icon-tabler-menu-2"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="var(--clr-accent-100)"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <line x1="4" y1="6" x2="20" y2="6"></line>
+        <line x1="4" y1="12" x2="20" y2="12"></line>
+        <line x1="4" y1="18" x2="20" y2="18"></line>
+      </svg>
+    </div>
+    <div id="experience">
+      <div class="loader"></div>
+      <canvas id="experience-canvas"></canvas>
+    </div>
+    <img class="reset-view-button" src="./textures/refresh.webp" alt="RESET" />
+    <h1 class="guidetext">AAAAAAAHHHHH</h1>
+    <footer>
+      <ul class="links">
+        <li>
+          <a href="tel:66840257778" target="_blank">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-phone"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="var(--clr-accent-100)"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+              <path
+                d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
+              ></path>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://goo.gl/maps/ey1CJpm6z2xhcqJ57" target="_blank">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-map-pin"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="var(--clr-accent-100)"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+              <circle cx="12" cy="11" r="3"></circle>
+              <path
+              d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
+              ></path>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://facebook.com/jimmprint" target="_blank">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="24"
+              height="24"
+              viewBox="0 0 50 50"
+              style="fill: var(--clr-accent-100)"
+              >
+              <path
+                d="M25,3C12.85,3,3,12.85,3,25c0,11.03,8.125,20.137,18.712,21.728V30.831h-5.443v-5.783h5.443v-3.848 c0-6.371,3.104-9.168,8.399-9.168c2.536,0,3.877,0.188,4.512,0.274v5.048h-3.612c-2.248,0-3.033,2.131-3.033,4.533v3.161h6.588 l-0.894,5.783h-5.694v15.944C38.716,45.318,47,36.137,47,25C47,12.85,37.15,3,25,3z"
+                ></path>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://lin.ee/zJuSeeB" target="_blank">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="24"
+              height="24"
+              viewBox="0 0 48 48"
+              style="fill: var(--clr-accent-100)"
+              >
+              <path
+                d="M 23.007812 5 C 11.600129 5 2.0058594 12.5508 2.0058594 22.236328 C 2.0058594 30.874232 9.6073525 37.884555 19.505859 39.232422 C 19.733605 39.281857 19.977406 39.361175 20.132812 39.429688 C 20.118043 39.515147 20.153199 39.911316 20.105469 40.273438 C 20.105469 40.273438 20.105469 40.275391 20.105469 40.275391 C 20.092619 40.352451 19.881057 41.615404 19.835938 41.878906 L 19.837891 41.876953 C 19.762771 42.309977 19.521995 43.033546 20.193359 44.048828 C 20.529042 44.556469 21.285396 44.987587 21.962891 45 C 22.640385 45.01241 23.208997 44.789728 23.832031 44.447266 C 28.380052 41.946356 33.321386 39.124288 37.214844 35.580078 C 41.108302 32.035869 44.005859 27.639151 44.005859 22.236328 C 44.005809 12.551142 34.415496 5 23.007812 5 z M 23.007812 8 C 33.10213 8 41.005859 14.567511 41.005859 22.236328 C 41.005859 26.578505 38.734856 30.139288 35.195312 33.361328 C 31.801217 36.450969 27.286874 39.09321 22.943359 41.494141 C 23.000899 41.149653 23.072266 40.71875 23.072266 40.71875 L 23.076172 40.695312 L 23.080078 40.671875 C 23.155098 40.109193 23.364983 39.264995 22.923828 38.162109 L 22.921875 38.160156 L 22.921875 38.158203 C 22.588283 37.333404 21.970623 36.974887 21.476562 36.738281 C 20.982502 36.501675 20.514934 36.37997 20.126953 36.296875 L 20.068359 36.285156 L 20.007812 36.277344 C 11.219504 35.121092 5.0058594 29.123568 5.0058594 22.236328 C 5.0058594 14.567856 12.913496 8 23.007812 8 z M 18.333984 17.136719 C 17.769984 17.136719 17.310547 17.592344 17.310547 18.152344 L 17.310547 25.845703 C 17.310547 26.406703 17.768984 26.861328 18.333984 26.861328 C 18.897984 26.861328 19.357422 26.405703 19.357422 25.845703 L 19.357422 18.152344 C 19.357422 17.592344 18.898984 17.136719 18.333984 17.136719 z M 21.853516 17.136719 C 21.743516 17.136719 21.633344 17.154453 21.527344 17.189453 C 21.109344 17.328453 20.828125 17.715344 20.828125 18.152344 L 20.828125 25.845703 C 20.828125 26.406703 21.288516 26.861328 21.853516 26.861328 C 22.419516 26.861328 22.878906 26.405703 22.878906 25.845703 L 22.878906 21.087891 L 26.853516 26.455078 C 27.045516 26.709078 27.351875 26.861328 27.671875 26.861328 C 27.780875 26.861328 27.890094 26.843594 27.996094 26.808594 C 28.416094 26.671594 28.697266 26.284703 28.697266 25.845703 L 28.697266 18.150391 C 28.697266 17.590391 28.238828 17.136719 27.673828 17.136719 C 27.108828 17.136719 26.648438 17.590391 26.648438 18.150391 L 26.648438 22.912109 L 22.671875 17.542969 C 22.479875 17.288969 22.172516 17.136719 21.853516 17.136719 z M 11.466797 17.138672 C 10.902797 17.138672 10.443359 17.592344 10.443359 18.152344 L 10.443359 25.847656 C 10.443359 26.408656 10.901797 26.863281 11.466797 26.863281 L 15.345703 26.863281 C 15.910703 26.863281 16.368187 26.405703 16.367188 25.845703 C 16.367188 25.285703 15.910703 24.830078 15.345703 24.830078 L 12.488281 24.830078 L 12.488281 18.152344 C 12.488281 17.592344 12.031797 17.138672 11.466797 17.138672 z M 31.095703 17.138672 C 30.531703 17.138672 30.072266 17.594297 30.072266 18.154297 L 30.072266 18.15625 L 30.072266 21.998047 L 30.072266 22 L 30.072266 22.001953 L 30.072266 25.845703 C 30.072266 26.406703 30.532703 26.861328 31.095703 26.861328 L 34.974609 26.861328 C 35.539609 26.861328 36 26.405703 36 25.845703 C 36 25.285703 35.539609 24.830078 34.974609 24.830078 L 32.119141 24.830078 L 32.119141 23.013672 L 34.974609 23.013672 C 35.540609 23.013672 36 22.558047 36 21.998047 C 36 21.437047 35.539609 20.982422 34.974609 20.982422 L 34.974609 20.986328 L 32.119141 20.986328 L 32.119141 19.169922 L 34.974609 19.169922 C 35.540609 19.169922 36 18.714297 36 18.154297 C 36 17.594297 35.539609 17.138672 34.974609 17.138672 L 31.095703 17.138672 z"
+              ></path>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="mailto:jimmprint.pinklao@gmail.com" target="_blank">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon icon-tabler icon-tabler-mail"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="var(--clr-accent-100)"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+              <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+              <polyline points="3 7 12 13 21 7"></polyline>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="onlyfans.html">
+            <img src="images/onlyfans.svg" height="26px">
+          </a>
+        </li>
+      </ul>
+      
+      <a href="privacy-policy.html" class="privacylink">terms and policy</a>
+      <p
+      class="copyrightmark"
+      style="font-size: small; color: var(--clr-accent-100)"
+      >
+      Copyright &copy; 2022, Jimm Print. All Rights Reserved
+    </p>
+  </footer>
   </body>
 </html>
