--- a/3d.html
+++ b/3d.html
@@ -12,11 +12,11 @@
     <title>Jimm Print</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="/jp/assets/site-CCjZE5-t.webmanifest">
+<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
@@ -27,16 +27,18 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Maitree:wght@400;500;700&family=Prompt:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
+    />
+    <script type="module" crossorigin src="/jp/assets/style-DLA1DiU9.js"></script>
+    <script type="module" crossorigin src="/jp/assets/nav-DogM-Ecs.js"></script>
+    <link rel="stylesheet" crossorigin href="/jp/assets/style-1rTz7WYF.css">
   </head>
   <body>
     <nav data-visible="false">
       <ul>
-        <li><a href="main.html">หน้าหลัก</a></li>
+        <li><a href="index.html">หน้าหลัก</a></li>
+        <li><a href="main.html">ดูเวลาทำการ</a></li>
         <li><a href="pricing.html">ดูราคา</a></li>
-        <li><a href="3d.html">ปรินต์ 3D</a></li>
+        <!-- <li><a href="3d.html">ปรินต์ 3D</a></li> -->
         <li><a href="about.html">เกี่ยวกับร้านจิ้ม</a></li>
         <li><a href="contact.html">ช่องทางติดต่อ</a></li>
       </ul>
@@ -64,10 +66,8 @@
       <div class="content">
         <h1>ร้านเรามี<br />เครื่อง 3D Print!</h1>
       </div>
-      <p>
-        <br /><br />ถ้าต้องการสอบถามรายละเอียดต่างๆ กรุณาทักมาหรือโทรมา
-        เพราะเราขี้เกียจอธิบายในเว็บ
-      </p>
+      <p style="text-align: center;">
+        <br /><br />เครื่องระบบ FDM พิมพ์ได้ไม่เกิน 225x225x250mm<br>ถ้าต้องการสอบถามรายละเอียดต่างๆ กรุณาทักมาหรือโทรมา</p>
     </div>
     <footer>
       <ul class="links">
