--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
     <title>Jimm Print</title>
 
     <!-- Favicon -->
-   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="/jp/assets/site-CCjZE5-t.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
@@ -27,19 +27,21 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Maitree:wght@400;500;700&family=Prompt:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
+    />
+    <script type="module" crossorigin src="/jp/assets/style-DLA1DiU9.js"></script>
+    <script type="module" crossorigin src="/jp/assets/nav-DogM-Ecs.js"></script>
+    <link rel="stylesheet" crossorigin href="/jp/assets/style-1rTz7WYF.css">
   </head>
 
   <body>
     <nav data-visible="false">
-      <ul>
-        <li><a href="main.html">หน้าหลัก</a></li>
+            <ul>
+        <li><a href="index.html">หน้าหลัก</a></li>
+        <li><a href="main.html">ดูเวลาทำการ</a></li>
         <li><a href="pricing.html">ดูราคา</a></li>
         <li><a href="3d.html">ปรินต์ 3D</a></li>
         <li><a href="about.html">เกี่ยวกับร้านจิ้ม</a></li>
-        <li><a href="contact.html">ช่องทางติดต่อ</a></li>
+        <!-- <li><a href="contact.html">ช่องทางติดต่อ</a></li> -->
       </ul>
     </nav>
     <div class="burger">
@@ -82,41 +84,10 @@
         </svg>
           <h2 style="display: inline">&nbsp แผนที่</h2>
           <div class="socialcontent" data-tab="map">
-            <div id="mapapi" style="height: 20rem"></div>
-            <script>
-              var map;
-              function initMap() {
-                var location = {
-                  lat: 13.77114693619562,
-                  lng: 100.48318640386196,
-                };
-                var map = new google.maps.Map(
-                  document.getElementById("mapapi"),
-                  {
-                    center: location,
-                    zoom: 18,
-                  }
-                );
-                var marker = new google.maps.Marker({
-                  position: location,
-                  map: map,
-                });
-                var infowindow = new google.maps.InfoWindow({
-                  content:
-                    '<div style="padding: 0.5rem; color: var(--clr-neutral-100); font-size: var(--fs-body); font-family: var(--ff-primary);">จิ้มปรินต์</div>',
-                });
-                infowindow.open({
-                  anchor: marker,
-                  map,
-                  shouldFocus: false,
-                });
-              }
-            </script>
-            <script
-              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6Bv48LHTT0WG3Oiy7cmZaGPiwJqlEu-M&callback=initMap"
-              async
-              defer
-            ></script>
+            <div id="mapapi" style="height: 20rem">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.126344339499!2d100.4831309!3d13.7712535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e299751b09af91%3A0xf9d8fd6edc88178!2z4LiI4Li04LmJ4Lih4Lib4Lij4Li04LiZ4LiV4LmM!5e0!3m2!1sen!2sth!4v1759387415221!5m2!1sen!2sth" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
             <textarea style="text-align: center; width:100%; padding:0.5rem; resize:none;" readonly id="map" class="content-text">176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700</textarea>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
