--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=Maitree:wght@400;500;700&family=Prompt:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/assets/main-DFEFzwQ6.js"></script>
+    <script type="module" crossorigin src="/assets/main-Cof6-uss.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/style-DLA1DiU9.js">
     <link rel="stylesheet" crossorigin href="/assets/style-1rTz7WYF.css">
     <link rel="stylesheet" crossorigin href="/assets/main-D24Qirgk.css">
